--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/poppins": "^5.1.1",
     "@material-tailwind/react": "^2.1.10",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.7.9",
     "blobmaker": "^0.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
